Edited wiki page TransportProtocol through web user interface.

--- a/wiki/TransportProtocol.wiki
+++ b/wiki/TransportProtocol.wiki
@@ -19,5 +19,5 @@ Un chunk avrà dimensioni fisse pari a *DA DETERMINARE* e ad esso sarà associat
 
 
 = Collegamenti Utili =
-* GoalBit: [http://sourceforge.net/apps/mediawiki/goalbit/index.php?title=Goalbit_architecture]
-* UUID: [http://en.wikipedia.org/wiki/Universally_unique_identifier]
+# GoalBit: [http://sourceforge.net/apps/mediawiki/goalbit/index.php?title=Goalbit_architecture]
+# UUID: [http://en.wikipedia.org/wiki/Universally_unique_identifier]
