Edited wiki page ImplicitQoS through web user interface.

--- a/wiki/ImplicitQoS.wiki
+++ b/wiki/ImplicitQoS.wiki
@@ -1,5 +1,5 @@
 #summary Valutazione del brano in modo da consigliare l'utente finale
-#labels Phase-Design
+#labels Phase-Design,Featured
 
 ==Metodo di classificazione dei brani (QoS implicita)==
 
@@ -13,7 +13,18 @@ Per *QoS Implicita* si intende una gestione della qualità del servizio che non 
 
 === Coefficiente di Qualità ===
 
-Il *coefficiente di qualità* è influenzato da tre coefficienti distinti:
-  * *Affinità con la Ricerca* : tiene conto di quanto il brano sia pertinente alla ricerca fatta dall'utente. Si tratta di una affinità sintattica e non semantica.
-  * *Qualità del Peer* : tiene conto del carico corrente e della distanza sulla DHT del peer che deve fornire il brano.
-  * *Qualità del File* : tiene conto della qualità del File contenente il brano ( bit-rate del brano, codifica, ecc)
+Il *coefficiente di qualità* (QC) è influenzato da tre coefficienti distinti:
+  * *Affinità con la Ricerca* (_AFF_): tiene conto di quanto il brano sia pertinente alla ricerca fatta dall'utente. Si tratta di una affinità sintattica e non semantica.
+  * *Qualità del Peer* (_PQ_): tiene conto del carico corrente e della distanza sulla DHT del peer che deve fornire il brano.
+  * *Qualità del File* (_FQ_) : tiene conto della qualità del File contenente il brano ( bit-rate del brano, codifica, ecc)
+
+Il coefficiente di qualità si trova assegnando dei pesi ai sotto-coefficienti secondo la seguente formula:
+{{{
+QC = 0.4*PQ + 0.4*FQ + 0.2*AFF
+}}}
+Il coefficiente di affinità ha un peso minore rispetto agli altri in quanto, non considerando aspetti semantici, rappresenta un informazione sulla quale l'utente può avere maggiori capacità di discernimento.
+
+==== Coefficiente di Affinità ====
+
+Il coefficiente di affinità, come già detto, ritornerà un valore compreso tra 0 e 1 che indicherà l'affinità sintattica dei metadati del brano con la ricerca effettuata dall'utente. Il valore del coefficiente dipende da quale percentuale dei metadati è coperta dalla ricerca dell'utente. Ad esempio la ricerca "slayer rain" avrà un affinità con il brano _Raining Blood_ degli _Slayer_ contenuto nell'album _Reign in Blood_ sarà _0.67_.
+Il calcolo viene effettuato nel seguente modo: la ricerca viene divisa in parole distinte ed ognuna di questa verrà processata separatamente. Ogni parola viene ricercata all'interno delle tre etichette del brano (Titolo, Artista, Album) ed il suo contributo sarà pari alla media delle presenze non nulle della parola nelle varie etichette. La presenza è calcolata come il rapporto tra la lunghezza della parola processata e la lunghezza del campo esclusi gli spazi nel caso in cui la parola sia presente, altrimenti vale zero. Quindi riprendendo l'esempio precedente la presenza della parola "rain" all'interno del campo "Raining Blood" è pari a 4/12=0.33. Il contributo della parola "blood" nel brano sarà pari alla media tra le presenze: nel titolo ha una presenza pari a 5/12, 0 nell'artista e 5/12 nell'album quindi sarà 5/12. 
