--- a/wiki/ImplicitQoS.wiki
+++ b/wiki/ImplicitQoS.wiki
@@ -27,4 +27,39 @@ Il coefficiente di affinità ha un peso minore rispetto agli altri in quanto, no
 ==== Coefficiente di Affinità ====
 
 Il coefficiente di affinità, come già detto, ritornerà un valore compreso tra 0 e 1 che indicherà l'affinità sintattica dei metadati del brano con la ricerca effettuata dall'utente. Il valore del coefficiente dipende da quale percentuale dei metadati è coperta dalla ricerca dell'utente. Ad esempio la ricerca "slayer rain" avrà un affinità con il brano _Raining Blood_ degli _Slayer_ contenuto nell'album _Reign in Blood_ sarà _0.67_.
-Il calcolo viene effettuato nel seguente modo: la ricerca viene divisa in parole distinte ed ognuna di questa verrà processata separatamente. Ogni parola viene ricercata all'interno delle tre etichette del brano (Titolo, Artista, Album) ed il suo contributo sarà pari alla media delle presenze non nulle della parola nelle varie etichette. La presenza è calcolata come il rapporto tra la lunghezza della parola processata e la lunghezza del campo esclusi gli spazi nel caso in cui la parola sia presente, altrimenti vale zero. Quindi riprendendo l'esempio precedente la presenza della parola "rain" all'interno del campo "Raining Blood" è pari a 4/12=0.33. Il contributo della parola "blood" nel brano sarà pari alla media tra le presenze: nel titolo ha una presenza pari a 5/12, 0 nell'artista e 5/12 nell'album quindi sarà 5/12. 
+Il calcolo viene effettuato nel seguente modo: la ricerca viene divisa in parole distinte ed ognuna di questa verrà processata separatamente. Ogni parola viene ricercata all'interno delle tre etichette del brano (Titolo, Artista, Album) ed il suo contributo sarà al valore massimo delle presenze non nulle della parola nelle varie etichette. La presenza è calcolata come il rapporto tra la lunghezza della parola processata e la lunghezza del campo esclusi gli spazi nel caso in cui la parola sia presente, altrimenti vale zero. Quindi riprendendo l'esempio precedente la presenza della parola "rain" all'interno del campo "Raining Blood" è pari a 4/12=0.33. Il contributo della parola "blood" nel brano sarà pari al massimo tra le presenze: nel titolo ha una presenza pari a 5/12, 0 nell'artista e 5/12 nell'album quindi sarà 5/12. Nel caso in cui la parola processata è contenuta nella stessa etichetta della parola precedente si aggiungerà un contributo con peso uguale agli altri e valore pari alla somma della lunghezza delle parole diviso la lunghezza dell'etichetta esclusi gli spazi. La formula finale è la seguente: 
+{{{
+AFF=sum(P*max(presenze))+sum(P*contributo_concatenazioni)
+}}}
+dove P=1/num_parole_ricerca.<br/>
+Calcoliamo l'affinità del brano con la ricerca "slayer rain blood". La parola "slayer" ha
+presenze 0,1,0 nelle etichette Titolo,Artista,Album quindi il suo valore è 1. La parola "rain" ha presenze 0.33,0,0 quindi il suo valore è 0,33. La parola "blood" ha presenze 0.42,0,0.42 quindi il suo valore è 0.42; inoltre la parola precedente è contenuta nell'etichetta Titolo quindi il contributo delle concatenazioni sarà pari a (4+5)/12 = 0.75. Il peso di ogni parola è pari a P=1/3=0.33. Il coefficiente di affinità sarà AFF=0.33*1+0.33*0.33+0.33*0.42+0.33*0.75=0.825. Se invece la ricerca è "slayer raining blood" il contributo della seconda parola sarà 0.58 e quello delle concatenazioni sarà 1 quindi il coefficiente di affinità sarà 1.
+_Dettagli Implementativi_
+Il calcolo di questo coefficiente si può effettuare con le funzioni associate alle stringe del linguaggio; il set di funzioni richiesto è: substring(),len(),replace(),indexof(). Di seguito lo pseudo codice dell'algoritmo di calcolo:
+{{{
+concatenazione_titolo=0
+concatenazione_album=0
+concatenazione_artista=0
+valori=list()
+for parola in ricerca :
+  max=-1;
+  for etichetta in etichette_sensibili:
+    etichetta_no_spazi=etichetta.replace(" ","")
+    if etichetta_no_spazi.indexof(parola)!=-1 :
+      concatenazione_etichetta+=len(parola)
+      valore_corrente=len(parola)/len(etichetta_no_spazi)
+      if valore_corrente>max :
+        max=valore_corrente
+    else:
+      valori.append(len(concatenazione_etichetta)/len(etichetta_no_spazi))
+      concatenazione_etichetta=0
+  valori.append(max);
+peso=1/len(ricerca)
+aff=0;
+for valore in valori:
+  aff+=(peso*valore)
+}}}
+ 
+==== Coefficiente di Qualità del File ====
+  
+
