--- a/wiki/ImplicitQoS.wiki
+++ b/wiki/ImplicitQoS.wiki
@@ -62,5 +62,6 @@ for valore in valori:
  
 ==== Coefficiente di Qualità del File ====
 _Dettagli Implementativi_<br/>
+  * [http://home.fuse.net/honnert/UltraID3Lib/ UltraID3Lib]
   * [http://taglib-sharp.sourcearchive.com/ TagLib# Download 1]
   * [http://download.banshee.fm/taglib-sharp/2.0.3.7/taglib-sharp-2.0.3.7-windows.zip TagLib# Download 2]
