--- a/wiki/EsplicitQoS.wiki
+++ b/wiki/EsplicitQoS.wiki
@@ -12,10 +12,10 @@ Per *QoS Esplicita* si intende la qualità che ogni utente assegna a una risorsa
 
 === Metodo di valutazione===
 
-La valutazione di una risorsa avviene come già detto dopo il suo utilizzo. Ogni utente possiede una lista dei file che ha usato e associa ad ognuno una valutazione. La valutazione indiretta viene assegnata solo al primo utilizzo "utile", ovvero solo dopo che la risorsa è stata completata interamente. 
+La valutazione di una risorsa avviene come già detto dopo il suo utilizzo. Ogni utente possiede una lista dei file che ha usato e associa ad ognuno una valutazione. Tale valutazione può essere diretta o indiretta. La valutazione indiretta viene assegnata solo al primo utilizzo "utile", ovvero solo dopo che la risorsa è stata completata interamente. 
 
 === Ottenere la qualità di una risorsa===
 
-
+La qualità di una risorsa si ottiene allo stesso modo in cui si ottiene la risorsa stessa. Quando infatti viene effettuata la ricerca di un file all'interno della rete, viene lanciata, in modo trasparente all'utente, la ricerca degli utenti che hanno utilizzato lo stesso file e si recupera la valutazione che gli utenti gli hanno assegnato.
 
 http://www.citilife.it/p2p.jpg
