--- a/wiki/EsplicitQoS.wiki
+++ b/wiki/EsplicitQoS.wiki
@@ -12,7 +12,13 @@ Per *QoS Esplicita* si intende la qualità che ogni utente assegna a una risorsa
 
 === Metodo di valutazione===
 
-La valutazione di una risorsa avviene come già detto dopo il suo utilizzo. Ogni utente possiede una lista dei file che ha usato e associa ad ognuno una valutazione. Cerchiamo di capire cosa vuol dire e il perché di tale scelta. Consideriamo il caso reale nel caso di una playlist musicale (le stesse considerazioni possono essere fatte nel caso di risorse video): un utente carica sul proprio player una playlist e lancia l'esecuzione della stessa. Generalmente dopo tale azione, l'utente medio passa ad altra attività continuando l'esecuzione del player in background, riprendendola in primo piano solo per navigare all'interno della playlist o qualora il brano scelto non corrisponda, in sostanza o in qualità, a quello che ci si aspettava all'atto della selezione. In queste condizioni appare evidente che richiedere la valutazione al temine di ogni brano, al pari di un feedback rilasciato al termine di una transazione nei diversi siti di e-commerce, non è una soluzione efficiente e soddisfacente. D'altra parte nemmeno l'idea di richiedere la valutazione complessiva al temine della playlist sembra praticabile perché, o si danneggia la reputazione dei file "buoni", a causa dei troppi file "cattivi" all'interno della playlist, o viceversa si trascura una risorsa scadente a causa di una esperienza valutata complessivamente buona. Un'altra idea potrebbe essere quella di richiedere  il feedback dell'utente in modo semi-random per creare delle statistiche sulle esperienze effettuate. Questo purtroppo non ci darebbe informazioni complete e in più il lavoro svolto da utenti responsabili verrebbe vanificato da utenti che non si interessano al rilascio di feedback. A questo punto viene formulata la seguente soluzione: per ogni brano ascoltato interamente, viene assegnato, indirettamente e quindi in modo trasparente all'utente, un voto positivo in quanto si può supporre che la risorsa selezionata corrisponda a quella desiderata. Se invece il brano viene interrotto dall'utente durante la sua esecuzione viene richiesto esplicitamente un feedback diretto. Ci troviamo infatti nella situazione in cui l'utente ha perso il suo interesse ad ascoltare il brano oppure il brano non corrisponde alle sue aspettative. In questo caso viene registrata la valutazione negativa (la risorsa non corrisponde alle aspettative) o neutra (l'utente non è più interessato a consumare la risorsa e nulla si può dire sulla sua qualità). In ogni caso la valutazione viene registrata solo una volta nella lista delle risorse utilizzate, anche se tale lista deve essere periodicamente aggiornata per permettere a nuove risorse di emergere all'interno della rete e sostituire le più obsolete. La lista deve contenere almeno i seguenti campi per ogni risorsa:
+La valutazione di una risorsa avviene come già detto dopo il suo utilizzo. Ogni utente possiede una lista dei file che ha usato e associa ad ognuno una valutazione. Cerchiamo di capire cosa vuol dire e il perché di tale scelta. 
+
+Consideriamo il caso reale nel caso di una playlist musicale (le stesse considerazioni possono essere fatte nel caso di risorse video): un utente carica sul proprio player una playlist e lancia l'esecuzione della stessa. Generalmente dopo tale azione, l'utente medio passa ad altra attività continuando l'esecuzione del player in background, riprendendola in primo piano solo per navigare all'interno della playlist o qualora il brano scelto non corrisponda, in sostanza o in qualità, a quello che ci si aspettava all'atto della selezione. In queste condizioni appare evidente che richiedere la valutazione al temine di ogni brano, al pari di un feedback rilasciato al termine di una transazione nei diversi siti di e-commerce, non è una soluzione efficiente e soddisfacente. D'altra parte nemmeno l'idea di richiedere la valutazione complessiva al temine della playlist sembra praticabile perché, o si danneggia la reputazione dei file "buoni", a causa dei troppi file "cattivi" all'interno della playlist, o viceversa si trascura una risorsa scadente a causa di una esperienza valutata complessivamente buona. Un'altra idea potrebbe essere quella di richiedere  il feedback dell'utente in modo semi-random per creare delle statistiche sulle esperienze effettuate. Questo purtroppo non ci darebbe informazioni complete e in più il lavoro svolto da utenti responsabili verrebbe vanificato da utenti che non si interessano al rilascio di feedback. 
+
+A questo punto viene formulata la seguente soluzione: per ogni brano ascoltato interamente, viene assegnato, indirettamente e quindi in modo trasparente all'utente, un voto positivo in quanto si può supporre che la risorsa selezionata corrisponda a quella desiderata. Se invece il brano viene interrotto dall'utente durante la sua esecuzione viene richiesto esplicitamente un feedback diretto. Ci troviamo infatti nella situazione in cui l'utente ha perso il suo interesse ad ascoltare il brano oppure il brano non corrisponde alle sue aspettative. In questo caso viene registrata la valutazione negativa (la risorsa non corrisponde alle aspettative) o neutra (l'utente non è più interessato a consumare la risorsa e nulla si può dire sulla sua qualità). 
+
+In ogni caso la valutazione viene registrata solo una volta nella lista delle risorse utilizzate, anche se tale lista deve essere periodicamente aggiornata per permettere a nuove risorse di emergere all'interno della rete e sostituire le più obsolete. La lista deve contenere almeno i seguenti campi per ogni risorsa:
 
     - Id della risorsa <br>
     - Valutazione assegnata alla risorsa <br>
